--- a/pages/pct.html
+++ b/pages/pct.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keaton Ferguson: PCT</title>
+    <title>Keaton Ferguson: Summer Plans</title>
     <style>
         /* Reset some default styles to make the page cleaner */
         body, h1, ul {
@@ -58,24 +58,36 @@
 </head>
 <body>
     <header>
-        <h1>Pacific Crest Trail</h1>
+        <h1>Summer Plans</h1>
     </header>
     <nav>
         <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="pages/research.html">Research</a></li>
             <li><a href="pages/machining.html">Machining</a></li>
-            <li><a href="pages/pct.html">PCT</a></li>
+            <li><a href="pages/pct.html">Summer Plans</a></li>
             <li><a href="pages/leatherwork.html">Leatherwork</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
-        <p>While an undergraduate at UCSC, I would tell people that I would run away into the woods after college.
-            While I will not be running, hiking a well defined path seemed like a reasonable interpretation of that idea. </p>
-        <p>While I have not been backpacking for very long, the dozen trips or so I have embarked on have been wonderful.
-            One of my favorite hiking experiences was an 18 mile day hike in 80 degree heat, where we ran out of water...
-            I look forward to the challenges the trail will put my mind, body and soul through.</p>
+        <p> For a variety of reasons, I don't think I will hike any of the Pacific Crest Trail this summer. Instead, I have travelled for a little while, and am now living in Berkeley.
+        Below are some scenic summaries from my (mis)adventures thus far.</p>
+
+        <p> <i> Driving to Arkansas to see the Solar Eclipse, solo. </i> </p>
+            
+        <p> 10 AM, sunny, dry, cool this side of the sierras. Having just finished the third cup of coffee I had drank in the past decade, I walk away from the hot river, dissapointed
+        I am disallowed from partaking in the hot, toxic water. A quarter hour later, the warm water of some other body envelopes me. The first people I've interacted with in the past
+        several days soak just feet away. The birds go crazy, as the caffiene seeps out of my brain and into the water. The magic of hot water releases me from the monotony of the hundreds
+        of miles so far, and the thousands to go. A discussion of ingrown toenails. Of California, from two different sides. Then some fuckers show up.</p>
+
+        <p> Seeing the approaching goons, my new friends make their exit. I could sit here for hours, I thought. The new ones leave their clothes on. It's one of their first times here,
+        I guess maybe I have been to judgemental. Then, the worst question. The question you never want to hear. "You guys mind if I play some music?" Outnumbered, I keep my complaints to
+        myself. "I just love music." "How about some soft rock?" My pleasant, ageless reality twists into a modern tourist's idea of relaxing. I make some attempt at agreeing with </p>
+            
+        <p>That was more driving than I have ever done before, I think. I met my first southern people,
+        and learned, after driving on the I-40 for four or five states, that the I-40 is a long road. The 395 in California was my favorite, though; sitting in a hot spring in a plains
+        full of birds, eating an orange, looking at the Eastern Sierras is hard to beat. I saw lightning bugs for the first time, in St. Ozark National Forest.</p>
     </main>
 </body>
 </html>
