--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #000;
+            background-color: #fff;
             border: 1px solid #ddd;
         }
         .image-container {
@@ -113,12 +113,10 @@
             <figcaption>Artist: Benjamin Lloyd</figcaption>
         </figure>
         </div>
-        <p>Most recerntly a specialist at SCIPP (Santa Cruz Institute of Particle Physics), working on the ATLAS Pixels project. My time here in Santa Cruz is running short, sadly,
-            as  I prepare to leave for the Pacific Crest Trail (PCT), or whatever else this summer holds (pending knee problems). See "summer plans". 
-            Regardless of where this summer takes me, I am in desperate need of vacation.</p>
-        <p>I plan on attending UC Berkeley's Physics P.h.D. program in the fall, and am excited to explore new fields with new people in a new place. </p>
+        <p>I was most recerntly a specialist at SCIPP (Santa Cruz Institute of Particle Physics), working on the ATLAS Pixels project.
+        <p>Attending UC Berkeley's Physics P.h.D. program is coming up, and I am excited to explore new fields with new people in a new place. </p>
         <p>Besides building things at work (see research, machining pages), I enjoy building things in my free time, which I hope to document here at some point. </p>
-        <p>Current CDs in my car: </p>
+        <p>Current CDs in my car (who will be retired soon, I love you DK): </p>
 
         <div class="image-container">
         <figure>
