--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #000000;
-            color: white;
+            background-color: #ffffff;
+            color: black;
         }
 
         header {
