fixed the links, cleaned up css

--- a/index.html
+++ b/index.html
@@ -3,103 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Keaton Ferguson's Website</title>
-    <style>
-        /* Reset some default styles to make the page cleaner */
-        body, h1, ul {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #ffffff;
-            color: black;
-        }
-
-        header {
-            background-color: #e31783;
-            color: #fff;
-            text-align: center;
-            padding: 100px 0;
-        }
-
-        header h1 {
-            font-size: 36px;
-        }
-
-        nav {
-            background-color: #b32972;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        nav li {
-            display: inline;
-            margin: 0 20px;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #fff;
-        }
-
-        main {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border: 1px solid #ddd;
-        }
-        .image-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        /* Styles for individual images */
-        .image-container img {
-            max-width: 200px;
-            margin: 10px;
-        }
-
-        /* Styles for captions */
-        .image-container figcaption {
-            text-align: center;
-            margin-top: 5px;
-            font-style: italic;
-            color: white;
-        }
-        .image-container2 {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        /* Styles for individual images */
-        .image-container2 img {
-            max-width: 500px;
-            margin: 10px;
-        }
-
-        /* Styles for captions */
-        .image-container2 figcaption {
-            text-align: center;
-            margin-top: 5px;
-            font-style: italic;
-    </style>
 </head>
 <body>
     <header>
         <h1>Keaton Ferguson</h1>
     </header>
-    <nav>
+    <nav class="navbar">
         <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="pages/research.html">Research</a></li>
             <li><a href="pages/machining.html">Machining</a></li>
             <li><a href="pages/pct.html">Summer Plans</a></li>
@@ -146,3 +59,4 @@
     </div>
     </main>
 </body>
+</html>
