--- a/pages/pct.html
+++ b/pages/pct.html
@@ -3,71 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Keaton Ferguson: Summer Plans</title>
-    <style>
-        /* Reset some default styles to make the page cleaner */
-        body, h1, ul {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-        }
-
-        header {
-            background-color: #1aa61c;
-            color: #fff;
-            text-align: center;
-            padding: 100px 0;
-        }
-
-        header h1 {
-            font-size: 36px;
-        }
-
-        nav {
-            background-color: #8bc784;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        nav li {
-            display: inline;
-            margin: 0 20px;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #fff;
-        }
-
-        main {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border: 1px solid #ddd;
-        }
-    </style>
 </head>
 <body>
-    <header>
+    <header id="pct-header">
         <h1>Summer Plans</h1>
     </header>
-    <nav>
+    <nav class="navbar" id="pct-nav">
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="pages/research.html">Research</a></li>
-            <li><a href="pages/machining.html">Machining</a></li>
-            <li><a href="pages/pct.html">Summer Plans</a></li>
-            <li><a href="pages/leatherwork.html">Leatherwork</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="research.html">Research</a></li>
+            <li><a href="machining.html">Machining</a></li>
+            <li><a href="/">Summer Plans</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
