--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
             <figcaption>Artist: Benjamin Lloyd</figcaption>
         </figure>
         </div>
-        <p>I was most recerntly a specialist at SCIPP (Santa Cruz Institute of Particle Physics), working on the ATLAS Pixels project.
-        <p>Attending UC Berkeley's Physics P.h.D. program is coming up, and I am excited to explore new fields with new people in a new place. </p>
+        <p>I am a first year physics graduate student at UC Berkeley. Most recently, I rotated in Professor Hallatshecks lab, and built some microfluidic devices.
+        Before I came to Berkeley, I was a specialist at SCIPP (Santa Cruz Institute of Particle Physics), working on the ATLAS Pixels project. </p>
         <p>Besides building things at work (see research, machining pages), I enjoy building things in my free time, which I hope to document here at some point. </p>
-        <p>Current CDs in my car (who will be retired soon, I love you DK): </p>
+        <p>Past favorite CDs in my car (who will not be retired soon! I love you DK): </p>
 
         <div class="image-container">
         <figure>
