--- a/pages/pct.html
+++ b/pages/pct.html
@@ -65,14 +65,16 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="pages/research.html">Research</a></li>
             <li><a href="pages/machining.html">Machining</a></li>
-            <li><a href="pages/pct.html">Summer Plans</a></li>
+            <li><a href="pages/pct.html">Traveling, Backpacking</a></li>
             <li><a href="pages/leatherwork.html">Leatherwork</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
-        <p> For a variety of reasons, I don't think I will hike any of the Pacific Crest Trail this summer. Instead, I have travelled for a little while, and am now living in Berkeley.
-        Below are some scenic summaries from my (mis)adventures thus far.</p>
+        <p> Backpacking is one of my favorite activities. More on that someday. </p>
+        
+        <p> There was a hope and a dream to hike the Pacific Crest Trail in the summer of '24, but I did not make it out the trail. Below are some stories of my adventures,
+        that happened instead.</p>
 
         <p> <i> Driving to Arkansas to see the Solar Eclipse, solo. </i> </p>
             
