--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="pages/research.html">Research</a></li>
             <li><a href="pages/machining.html">Machining</a></li>
-            <li><a href="pages/pct.html">Summer Plans</a></li>
+            <li><a href="pages/pct.html">Traveling, Backpacking</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
         </ul>
     </nav>
