--- a/pages/pct.html
+++ b/pages/pct.html
@@ -63,10 +63,10 @@
     <nav>
         <ul>
             <li><a href="/index.html">Home</a></li>
-            <li><a href="pages/research.html">Research</a></li>
-            <li><a href="pages/machining.html">Machining</a></li>
-            <li><a href="pages/pct.html">Traveling, Backpacking</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="./research.html">Research</a></li>
+            <li><a href="./machining.html">Machining</a></li>
+            <li><a href="./pct.html">Traveling, Backpacking</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
