--- a/pages/pct.html
+++ b/pages/pct.html
@@ -70,6 +70,7 @@
         </ul>
     </nav>
     <main>
+        <p> <i> Updated March 17th 2025</i> </p>
         <p> Backpacking is one of my favorite activities. More on that someday. </p>
         
         <p> There was a hope and a dream to hike the Pacific Crest Trail in the summer of '24, but I did not make it out the trail. Below are some stories of my adventures,
