--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             <figcaption>Artist: Benjamin Lloyd</figcaption>
         </figure>
         </div>
+        <p> <i> Updated March 17th 2025</i> </p>
         <p>I am a first year physics graduate student at UC Berkeley. Most recently, I rotated in Professor Hallatshecks lab, and built some microfluidic devices.
         Before I came to Berkeley, I was a specialist at SCIPP (Santa Cruz Institute of Particle Physics), working on the ATLAS Pixels project. </p>
         <p>Besides building things at work (see research, machining pages), I enjoy building things in my free time, which I hope to document here at some point. </p>
