--- a/pages/research.html
+++ b/pages/research.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-color: #1aa61c;
+            background-color: #1a80a6;
             color: #fff;
             text-align: center;
             padding: 100px 0;
@@ -28,7 +28,7 @@
         }
 
         nav {
-            background-color: #8bc784;
+            background-color: #84a6c7;
             text-align: center;
         }
 
