--- a/pages/machining.html
+++ b/pages/machining.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-color: #1aa61c;
+            background-color: #e0ac1e;
             color: #fff;
             text-align: center;
             padding: 100px 0;
@@ -28,7 +28,7 @@
         }
 
         nav {
-            background-color: #8bc784;
+            background-color: #c4a325;
             text-align: center;
         }
 
