--- a/pages/machining.html
+++ b/pages/machining.html
@@ -28,7 +28,7 @@
         }
 
         nav {
-            background-color: #c4a325;
+            background-color: #cd9b12;
             text-align: center;
         }
 
