--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <p> <i> Updated March 17th 2025</i> </p>
         <p> <li><a href="files/erc.pdf">External Review Committee's Physics Department Review (pdf)</a></li> <p>
-        <p>I am a first year physics graduate student at UC Berkeley. Most recently, I rotated in Professor Hallatshecks lab, and built some microfluidic devices.
+        <p>I am a first year physics graduate student at UC Berkeley. Most recently, I rotated in Professor Hallatsheks lab, and built some microfluidic devices.
         Before I came to Berkeley, I was a specialist at SCIPP (Santa Cruz Institute of Particle Physics), working on the ATLAS Pixels project. </p>
         <p>Besides building things at work (see research, machining pages), I enjoy building things in my free time, which I hope to document here at some point. </p>
         <p>Past favorite CDs in my car (who will not be retired soon! I love you DK): </p>
