--- a/pages/machining.html
+++ b/pages/machining.html
@@ -70,7 +70,9 @@
         </ul>
     </nav>
     <main>
-        <p> Whenever I get back down to Santa Cruz, and around to taking pictures of my completed machining projects, I'll put them here. </p>
+        <p> <b> Machining at UCB (2025 and onwards) </b> </p>
+        
+        <p> <b> Machining in the SCIPP machine shop (2023-2024) </b> </p>
 
         <p> I was trained on the Bridgeport (non-computerized) mill, in the SCIPP machine shop, once I graduated (something about undergraduates using dangerous machinery). I was taught by Forest Martinez-McKinney, an ATLAS strips guy, who I hold a deep appreciation for. If you ever get the chance, swing by the SCIPP lab room and ask him about, well, anything really. A true joy of a fellow.</p>
 
