--- a/pages/machining.html
+++ b/pages/machining.html
@@ -70,6 +70,7 @@
         </ul>
     </nav>
     <main>
+        <p> <i> Updated March 31st, 2025</i> </p>
         <p> <b> Machining at UCB (2025 and onwards) </b> </p>
         
         <p> <b> Machining in the SCIPP machine shop (2023-2024) </b> </p>
