--- a/pages/machining.html
+++ b/pages/machining.html
@@ -71,7 +71,8 @@
     </nav>
     <main>
         <p> <i> Updated March 31st, 2025</i> </p>
-        <p> <b> Machining at UCB (2025 and onwards) </b> </p>
+        <p> <b> Machining at UC Berkeley (2025 and onwards) </b> </p>
+        <p> I have finished my training on the manual mill and lathe in the Physics student machine shop, and look forward to starting more projects soon. </p>
         
         <p> <b> Machining in the SCIPP machine shop (2023-2024) </b> </p>
 
