--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,8 +72,8 @@
     <main>
         <!-- Content of your subpages goes here -->
         <p> I am happy to discuss physics, hiking, role playing games (Pathfinder 2e player)!</p>
-        <p> keatonferguson@gmail.com</p>
-        <p> keatonferguson@berkeley.edu</p>
+        <p> keatonferguson (at) gmail.com</p>
+        <p> keatonferguson (at) berkeley.edu</p>
     </main>
 </body>
 </html>
