--- a/pages/research.html
+++ b/pages/research.html
@@ -71,9 +71,12 @@
     </nav>
     <main>
         <p> <i> Updated March 17th, 2025 </i></p>
+        <p> <b> Research at UC Berkeley (2024 onwards)</b> </p>
         
         <p> Most recently, in my first semester at Berkeley, I rotated in Professor Oskar Hallatschek's lab, building microfluidic devices.  </p>
-        
+
+        <p> <b> Research at UC Santa Cruz (2020 onwards)</b> </p>
+
         <p>The brunt of my research experience was under the tutelage of Professor Michael Hance, of UCSC, and of SCIPP Atlas Pixels. An excellent teacher,
             and a wonderful PI, my two(ish) years working for him has been my most rewarding work. The majority of my work for ATLAS concerned developing
             the testing setups for Pixel modules, the smallest sensors in the ATLAS experiment. </p>
