--- a/pages/research.html
+++ b/pages/research.html
@@ -70,7 +70,7 @@
         </ul>
     </nav>
     <main>
-        <p> <i> Updated March 17th, 2025 </i></p>
+        <p> <i> Updated March 31st, 2025 </i></p>
         <p> <b> Research at UC Berkeley (2024 onwards)</b> </p>
         
         <p> Most recently, in my first semester at Berkeley, I rotated in Professor Oskar Hallatschek's lab, building microfluidic devices.  </p>
