--- a/pages/machining.html
+++ b/pages/machining.html
@@ -76,9 +76,11 @@
         
         <p> <b> Machining in the SCIPP machine shop (2023-2024) </b> </p>
 
-        <p> I was trained on the Bridgeport (non-computerized) mill, in the SCIPP machine shop, once I graduated (something about undergraduates using dangerous machinery). I was taught by Forest Martinez-McKinney, an ATLAS strips guy, who I hold a deep appreciation for. If you ever get the chance, swing by the SCIPP lab room and ask him about, well, anything really. A true joy of a fellow.</p>
+        <p> I was trained on the Bridgeport manual mill, in the SCIPP machine shop, during my post-bac position at SCIPP.
+            I would have started sooner, but there was something about undergraduates using dangerous machinery. 
+            I was taught machining by Forest Martinez-McKinney, an ATLAS strips guy. He's great, and I appreciate the knowledge he's shared with me. </p>
 
-        <p> Forest also started to train me on the lathe, but I still have much to learn before I understand it's capabilities. I guess there is a lot to learn with the manual mill as well.</p>
+        <p> Forest also started to train me on the lathe. I have lots left to learn with both machines.</p>
     </main>
 </body>
 </html>
